--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -462,3 +462,12 @@ blockquote > p {
   background-color: rgba(27,31,35,.05);
   border-radius: 3px;
 }
+
+a {
+  margin: 0;
+  color: #d32f2f;
+  -webkit-text-decoration: none;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 0.9em;
+}
