--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -1,4 +1,3 @@
-.markdown-body a:active,
 .markdown-body a:hover {
   outline-width: 0;
 }
@@ -33,4 +32,49 @@
   text-decoration: none;
   font-weight: 600;
   font-size: 0.9em;
+}
+
+.markdown-body blockquote {
+  margin-left: 0;
+  padding: .1em 0 .1em 1.5em;
+  color: #7b848e;
+  border-left: .3em solid rgba(128, 128, 128, .6);
+}
+
+.markdown-body ul, ol {
+  padding-left: 1em;
+}
+
+.markdown-body ul > li {
+  list-style: inside;
+}
+
+.markdown-body ol > li {
+  list-style-position: inside;
+}
+
+.markdown-body table {
+  border-collapse: collapse;
+  border-style: hidden;
+  width: max-content;
+  max-width: 100%;
+  overflow: auto;
+  margin: 20px 0;
+  border-radius: 4px;
+  box-shadow: 0 0 0 1px #d8d8d8;
+  font-size: 0.95em;
+}
+
+.markdown-body table tr:nth-child(2n) {
+  background-color: rgba(128, 128, 128, .15);
+}
+
+.markdown-body table th {
+  font-weight: 600;
+}
+
+.markdown-body table th,
+.markdown-body table td {
+  padding: .5em 1.5em;
+  border: .5px solid rgba(128, 128, 128, .5);
 }
