--- a/src/styles/prism.css
+++ b/src/styles/prism.css
@@ -1,8 +1,8 @@
 .markdown-body code, pre {
 	color: #ccc !important;
-	background: #2d2d2d !important;
+	background: #313131 !important;
 	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-	font-size: 0.95em;
+	font-size: 0.92em;
 	text-align: left;
 	white-space: pre;
 	word-spacing: normal;
@@ -23,7 +23,6 @@
 	background: none !important;
 	color: #cfcfcf !important;
 	padding: 0 !important;
-	font-size: 0.95em;
 }
 
 /* Code blocks */
@@ -35,17 +34,24 @@
 
 .markdown-body :not(pre) > code,
 pre {
-	background: #2d2d2d !important;
+	background: #313131 !important;
 	border-radius: .5em;
-	font-size: 0.9em;
 }
 
 .markdown-body :not(pre) > code {
-	padding: .35em !important;
-	background: #3f3f3f !important;
+	padding: .2em .6em !important;
+	margin: 0 .2em;
 	border-radius: .5em;
-	font-size: 0.85em;
+	font-size: 0.8em;
+	font-weight: 600;
 	white-space: normal;
+}
+
+@media(prefers-color-scheme: light) {
+	.markdown-body :not(pre) > code {
+		background: #faf0ee !important;
+		color: #905 !important;
+	}
 }
 
 .token.comment,
