--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -29,12 +29,12 @@
 }
 
 .markdown-body a {
-  margin: 0;
+  margin: 0 5px;
   color: #d32f2f;
   -webkit-text-decoration: none;
   text-decoration: none;
   font-weight: 600;
-  font-size: 0.9em;
+  font-size: 0.95em;
 }
 
 .markdown-body blockquote {
