--- a/src/styles/markdown/prism.css
+++ b/src/styles/markdown/prism.css
@@ -1,7 +1,7 @@
 .markdown-body code, pre {
 	color: #ccc !important;
 	background: #313131 !important;
-	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace, 'Source Code Pro';
+	font-family: Consolas, Monaco, 'Source Code Pro', 'Andale Mono', 'Ubuntu Mono', monospace;
 	font-size: 0.92em;
 	text-align: left;
 	white-space: pre;
@@ -40,7 +40,7 @@
 	margin: 0 .2em;
 	border-radius: .5em;
 	font-size: 0.8em;
-	font-weight: 600;
+	font-weight: 700;
 	white-space: normal;
 }
 
@@ -60,11 +60,7 @@
 	}
 }
 
-.token.comment,
-.token.block-comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
+.token.comment, .token.block-comment, .token.prolog, .token.doctype, .token.cdata {
 	color: #999;
 }
 
@@ -72,10 +68,7 @@
 	color: #cfcfcf;
 }
 
-.token.tag,
-.token.attr-name,
-.token.namespace,
-.token.deleted {
+.token.tag, .token.attr-name, .token.namespace, .token.deleted {
 	color: #e2777a;
 }
 
@@ -83,44 +76,28 @@
 	color: #6196cc;
 }
 
-.token.boolean,
-.token.number,
-.token.function {
+.token.boolean, .token.number, .token.function {
 	color: #f08d49;
 }
 
-.token.property,
-.token.class-name,
-.token.constant,
-.token.symbol {
+.token.property, .token.class-name, .token.constant, .token.symbol {
 	color: #f8c555;
 }
 
-.token.selector,
-.token.important,
-.token.atrule,
-.token.keyword,
-.token.builtin {
+.token.selector, .token.important, .token.atrule, .token.keyword, .token.builtin {
 	color: #cc99cd;
 }
 
-.token.string,
-.token.char,
-.token.attr-value,
-.token.regex,
-.token.variable {
+.token.string, .token.char, .token.attr-value, .token.regex, .token.variable {
 	color: #7ec699;
 }
 
-.token.operator,
-.token.entity,
-.token.url {
+.token.operator, .token.entity, .token.url {
 	color: #67cdcc;
 }
 
-.token.important,
-.token.bold {
-	font-weight: bold;
+.token.important, .token.bold {
+	font-weight: 700;
 }
 .token.italic {
 	font-style: italic;
