--- a/src/styles/markdown/prism.css
+++ b/src/styles/markdown/prism.css
@@ -1,8 +1,5 @@
 .markdown-body code, pre {
-	color: #ccc !important;
-	background: #313131 !important;
 	font-family: Consolas, Monaco, 'Source Code Pro', 'Andale Mono', 'Ubuntu Mono', monospace;
-	font-size: 0.92em;
 	text-align: left;
 	white-space: pre;
 	word-spacing: normal;
@@ -18,12 +15,6 @@
 	hyphens: none;
 }
 
-.markdown-body code {
-	background: none !important;
-	color: #cfcfcf !important;
-	padding: 0 !important;
-}
-
 .markdown-body pre {
 	padding: 1em;
 	margin: .5em 0;
@@ -31,13 +22,13 @@
 }
 
 .markdown-body :not(pre) > code, pre {
-	background: #313131 !important;
+	color: #cfcfcf;
+	background: #363636;
 	border-radius: .5em;
 }
 
 .markdown-body :not(pre) > code {
-	padding: .2em .6em !important;
-	margin: 0 .2em;
+	padding: .2em .6em;
 	border-radius: .5em;
 	font-size: 0.8em;
 	font-weight: 700;
@@ -46,8 +37,8 @@
 
 @media(prefers-color-scheme: light) {
 	.markdown-body :not(pre) > code {
-		background: #faf0ee !important;
-		color: #905 !important;
+		color: #905;
+		background: #faf0ee;
 	}
 }
 
@@ -56,7 +47,7 @@
     	font-size: 1em;
 	}
 	.markdown-body :not(pre) > code {
-		font-size: 0.82em;
+		font-size: 0.9em;
 	}
 }
 
