--- a/src/styles/markdown/prism.css
+++ b/src/styles/markdown/prism.css
@@ -20,13 +20,14 @@
 	background: #363636;
 	border-radius: .5em;
 	padding: 1em;
+	margin-top: 0;
 	margin-bottom: 16px;
 	overflow: auto;
 }
 
 .markdown-body pre > code {
 	padding: 0;
-	font-size: .95em;
+	font-size: .9em;
 	background-color: rgba(255, 255, 255, 0) !important;
 }
 
@@ -35,8 +36,7 @@
 	background: #363636;
 	border-radius: .5em;
 	padding: .2em .6em;
-	border-radius: .5em;
-	font-size: 0.8em;
+	font-size: 0.85em;
 	font-weight: 700;
 	white-space: normal;
 }
