New: Help for AOSP and AOSP Monthly
Fix: Seperated template in ConfigurationGenerator

--- a/src/styles/markdown/common.css
+++ b/src/styles/markdown/common.css
@@ -64,6 +64,10 @@
     padding-left: 1em;
 }
 
+.markdown-body li {
+    padding-bottom: 8px;
+}
+
 .markdown-body ul > li {
     list-style: inside;
 }
