Fix: Unnecessary border of the last row of the Table
New: Move the API information to the .env file

--- a/src/styles/modules/index.module.css
+++ b/src/styles/modules/index.module.css
@@ -13,3 +13,7 @@
 .onHover:hover {
     background-color: rgba(128, 128, 128, .08);
 }
+
+.borderBottom  {
+    border-bottom: 1px solid rgba(81, 81, 81, 1);
+}
