--- a/src/styles/markdown/prism.css
+++ b/src/styles/markdown/prism.css
@@ -36,6 +36,7 @@
 	background: #363636;
 	border-radius: .5em;
 	padding: .2em .6em;
+	margin: 0 .4em;
 	font-size: 0.85em;
 	font-weight: 700;
 	white-space: normal;
